Atualizações SCSS + Service do projeto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "types": [
       "googlemaps"
     ],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
